--- a/company-vacation-calendar-server/package.json
+++ b/company-vacation-calendar-server/package.json
@@ -13,8 +13,10 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
+    "express-jwt": "^6.0.0",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0"
   }
