--- a/company-vacation-calendar-server/package.json
+++ b/company-vacation-calendar-server/package.json
@@ -4,12 +4,13 @@
   "description": "Rest API for the purpose of CVC React App",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "codemon index.js"
   },
   "author": "Simeon Mechkov",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "codemon": "^0.1.31-development",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
@@ -18,6 +19,7 @@
     "firebase-admin": "^9.4.2",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^8.3.2"
   }
 }
