--- a/company-vacation-calendar-server/package.json
+++ b/company-vacation-calendar-server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
     "express-jwt": "^6.0.0",
