--- a/company-vacation-calendar-server/package.json
+++ b/company-vacation-calendar-server/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^9.4.2",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "nodemailer": "^6.4.17",
     "uuid": "^8.3.2"
   }
 }
