--- a/company-vacation-calendar-server/package.json
+++ b/company-vacation-calendar-server/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
     "express-jwt": "^6.0.0",
