feat(web): added half ui and logic

--- a/company-vacation-calendar/firebase.json
+++ b/company-vacation-calendar/firebase.json
@@ -1,10 +1,13 @@
 {
   "hosting": {
     "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "redirects": [
+      {
+        "source": "/",
+        "destination": "/home",
+        "type": 301
+      }
     ],
     "rewrites": [
       {
