--- a/company-vacation-calendar/package.json
+++ b/company-vacation-calendar/package.json
@@ -14,6 +14,7 @@
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primereact": "^6.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-big-calendar": "^0.30.0",
     "react-dom": "^17.0.1",
