--- a/company-vacation-calendar/package.json
+++ b/company-vacation-calendar/package.json
@@ -6,25 +6,35 @@
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@reduxjs/toolkit": "^1.5.0",
+    "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-big-calendar": "^0.36.2",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.21",
+    "@types/react-router-dom": "^5.3.2",
     "@types/react-transition-group": "^4.4.0",
     "formik": "^2.2.6",
     "moment": "^2.29.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primereact": "^6.0.0",
-    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-big-calendar": "^0.30.0",
     "react-dom": "^17.0.1",
+    "react-hot-toast": "^2.2.0",
     "react-query": "^3.6.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "typescript": "^4.5.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
