--- a/company-vacation-calendar-server/package.json
+++ b/company-vacation-calendar-server/package.json
@@ -10,6 +10,7 @@
   "author": "Simeon Mechkov",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.25.0",
     "compression": "^1.7.4",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
