--- a/company-vacation-calendar-server/package.json
+++ b/company-vacation-calendar-server/package.json
@@ -17,11 +17,11 @@
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
     "express-jwt": "^6.0.0",
-    "firebase": "^8.2.1",
-    "firebase-admin": "^9.4.2",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^1.0.3",
     "method-override": "^3.0.0",
     "nodemailer": "^6.7.2",
+    "tedious": "^14.3.0",
     "uuid": "^8.3.2"
   }
 }
