--- a/company-vacation-calendar-server/package.json
+++ b/company-vacation-calendar-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "exec": "nodemon index.js"
+    "exec": "nodemon -r dotenv/config index.js"
   },
   "author": "Simeon Mechkov",
   "license": "MIT",
@@ -13,7 +13,6 @@
     "axios": "^0.25.0",
     "compression": "^1.7.4",
     "crypto": "^1.0.1",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
     "express-jwt": "^6.0.0",
@@ -23,5 +22,8 @@
     "nodemailer": "^6.7.2",
     "tedious": "^14.3.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.0"
   }
 }
